<resources>
    <string name="app_name">1order User</string>
    <string name="welcome_to">Welcome to </string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="continue_with_phone">Continue with your phone number </string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="text_forget_password">Forget Password?</string>
    <string name="forget_password">Forget Password</string>
    <string name="dont_have_account">Dont Have An Account?</string>
    <string name="sign_up">Signup</string>
    <string name="send">Send</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_verification_code">Enter Your Verification Code That We Sent You Through Your Phone Number.</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend code?</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="add_your_information">Add Your Information</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="check_terms_condition">By Clicking You Agree Of The Terms Condition And  Privacy Policy</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="favorite">Favorite</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="on_order">1 Order</string>
    <string name="public_">Public</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorite\'s</string>
    <string name="notifications">Notifications</string>
    <string name="new_notifications">New Notifications</string>
    <string name="no_orders_yet">No Orders Yet</string>
    <string name="profile">Profile</string>
    <string name="privacy">Privacy</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="Log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="sure_log_out">Are You Sure Want To Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">this order is canceled</string>
    <string name="logout">Logout</string>
    <string name="sure_delete_account">Are You Sure Want To Delete Account</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="resturants">Resturants</string>
    <string name="offers">Offers</string>
    <string name="sandwich">Sandwich</string>
    <string name="total">Total</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="Continue">Continue</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>
    <string name="order_details">Order Details</string>
    <string name="order_images">Order images</string>
    <string name="bill">Bill</string>
    <string name="tax">Tax</string>
    <string name="dilevary">Dilevary</string>
    <string name="create_order">Create Order</string>
    <string name="cart">Cart</string>
    <string name="list_orders">List Orders</string>
    <string name="go_pay">Go pay</string>
    <string name="discount">Discount</string>
    <string name="discount_code">Discount Code</string>
    <string name="add">Add</string>
    <string name="rating">Rating</string>
    <string name="add_rate">Add Rate</string>
    <string name="rate">Rate</string>
    <string name="comment">Comment ...</string>
    <string name="add_comment">Add Comment</string>
    <string name="no_rating_yet">No Rating Yet</string>
    <string name="no_notification_yet">No Notifications Yet</string>
    <string name="no_favorite_yet">No Favorites Yet</string>
    <string name="confirm">Confirm</string>
    <string name="preparing">preparing</string>
    <string name="ready">Ready</string>
    <string name="on_way">on way</string>
    <string name="waiting_client">waiting confirm delivered</string>
    <string name="delivered">delivered</string>
    <string name="pending">pennding</string>
    <string name="why">why you want to cancel order</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="extra_items">Extra Items</string>
    <string name="delivary">Delivary</string>
    <string name="total_price">Total Price</string>
    <string name="traking">Traking</string>
    <string name="sure_cancel_order">Are You Sure Want To Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location">Location</string>
    <string name="user_location">User Location</string>
    <string name="go_to_pay">Go To Pay</string>
    <string name="chat">Chat</string>
    <string name="type_message">Type A Message</string>
    <string name="confirm_pay">Confirm To Pay</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="payment">Payment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_delivery_address">Enter The Full Delivery Address</string>
    <string name="please_enter_phone">Please enter your phone number</string>
    <string name="please_enter_name">Please enter your name</string>
    <string name="please_enter_message">Please enter your message</string>
    <string name="please_enter_code">Please enter your code</string>
    <string name="please_enter_email">Please enter your email</string>
    <string name="invalid_email">The email entered is not valid</string>
    <string name="enter_verify_code">Please enter verfication code</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="password_must_be_6_chat">Password must be at least 6 characters long</string>
    <string name="dlg_retry">Retry</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="two_password_not_match">The two passwords do not match </string>
    <string name="please_enter_address">Please enter your address</string>
    <string name="please_enter_title">Please enter your title</string>
    <string name="please_select_your_country">Please select your country</string>
    <string name="please_select_your_city">Please select your city</string>
    <string name="plaese_agree_terms">By clicking here you agree to the Privacy Policy</string>
    <string name="please_old_password">Please enter old password</string>
    <string name="please_new_password">Please enter new password</string>
    <string name="change_password_success">Done change password successdully</string>
    <string name="please_select_your_image">Please select your personal image</string>
    <string name="my_location">My Location</string>
    <string name="please_login">Please login first to continue \nBecause you are now in guest mode</string>
    <string name="km">KM</string>
    <string name="please_enter_order_details">Please enter order details</string>
    <string name="please_get_shop_name">Please get shop name</string>
    <string name="please_select_delivery_location_address">Please select delivery location and address</string>
    <string name="please_select_order_images">Please select order images</string>
    <string name="delivery_cost_required">Delivery cost required</string>
    <string name="tax_required">Tax required</string>
    <string name="restaurant_is_closed_now">Restaurant is closed now</string>
    <string name="public_order">Public Order</string>
    <string name="from_restaurant">From Restaurant</string>
    <string name="to_location">To Location</string>
    <string name="Change_location">Change location</string>
    <string name="Mada_Card">Mada Card</string>
    <string name="Cash">Cash</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Select_Options">Select Up Options</string>
    <string name="Extras">Extras</string>
    <string name="pic_image">pic image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="Delivered">Delivered</string>
    <string name="Direction">Direction</string>
    <string name="Call_Restaurant">Call Restaurant</string>
    <string name="cancelled">This order is cancelled</string>
    <string name="possible">It is not available to deliver to this area</string>

    <string name="Logged">You Haven\'t Logged In Yet ,Please Go To</string>

    <string name="Mastercard_Visa_Card">Mastercard / Visa Card</string>
    <string name="delete_cart">To add new restaurant cart , we will delete previous restaurant cart</string>
    <string name="rate_message_error">You must have at least 1 delivered order from this shop to rate it</string>
    <string name="enter_your_verification_code_that_we_sent_you_through_your_phone_number">Enter Your Verification Code That We Sent You Through Your Phone Number.</string>


</resources>