<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".ui.activivtes.orders.PaymentActivity">

    <RelativeLayout
        android:id="@+id/rel_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="18dp">

        <TextView
            android:id="@+id/tv_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/payment"
            android:textColor="@color/colorMainText"
            android:textSize="@dimen/_14ssp" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_icon_back" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rel_toolbar"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <RadioButton
                android:id="@+id/cash"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_ll_quantity"
                android:drawableEnd="@drawable/ic_icon_cash"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layoutDirection="rtl"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/Cash"
                android:textColor="@color/colorMainText"
                android:textSize="16sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/mastercard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_ll_quantity"
                android:drawableEnd="@drawable/ic_icon_mastercard_visa"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layoutDirection="rtl"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/Mastercard_Visa_Card"
                android:textColor="@color/colorMainText"
                android:textSize="16sp">

            </RadioButton>

            <RadioButton
                android:id="@+id/mada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ll_quantity"
                android:drawableEnd="@drawable/ic_icon_mada_card"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:layoutDirection="rtl"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/Mada_Card"
                android:textColor="@color/colorMainText"
                android:textSize="16sp">

            </RadioButton>


        </RadioGroup>



    </RelativeLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Relative"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/confirm"
        android:textAllCaps="false"

        android:textSize="16sp"
        android:theme="@style/ButtonThemeBlack" />
</RelativeLayout>