<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/iv_add_to_cart_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:text="@string/delete_cart"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_below="@+id/iv_add_to_cart_image">

            <TextView
                android:layout_weight="1"
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="16sp"
                android:textColor="@color/colorRed"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_btn_go_to_cart"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:theme="@style/ButtonThemeBlue"/>

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Continue"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_btn"
                android:theme="@style/ButtonThemeBlack"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>