<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/iv_delete_account_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_undraw_throw_away_re_x60k" />

        <TextView
            android:id="@+id/tv_text_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_delete_account_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/sure_delete_account"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_delete_account_image" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_text_logout"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:theme="@style/ButtonThemeBlue" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>