<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_8sdp">

    <RelativeLayout
        android:id="@+id/rel_discount_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_below="@id/card_restruant_data">

        <RelativeLayout
            android:id="@+id/rel_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_text_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/rate"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icon_cancel"
                android:layout_marginTop="@dimen/_6sdp"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:numStars="5"
            android:progressTint="@color/colorYallow1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_below="@+id/rel_title"/>

        <RelativeLayout
            android:id="@+id/rel_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@id/ratingBar">

            <TextView
                android:id="@+id/tv_text_add_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/add_comment"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/_14sdp" />

            <LinearLayout
                android:id="@+id/ll_comment"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_below="@+id/tv_text_add_comment">

                <EditText
                    android:id="@+id/input_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="16sp"
                    android:textColor="@color/colorMainText"
                    android:hint="@string/comment"
                    android:lines="3"
                    android:textAlignment="viewStart"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/bg_input" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel_comment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>