<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:id="@+id/iv_add_to_cart_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_undraw_by_the_road_re_vvs7" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_add_to_cart_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/possible"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_go_to_cart"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorMainText"
                android:textSize="16sp"
                android:theme="@style/ButtonThemeBlue" />

            <Button
                android:id="@+id/change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/change"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:theme="@style/ButtonThemeBlack" />

        </LinearLayout>



    </RelativeLayout>

</androidx.cardview.widget.CardView>